k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-service
spec:
  selector:
    app: nestjs-app
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
